tolk-tester/tests/invalid-syntax/err-3358.tolk
fun main() {
    return grams("0.1234567891");
}

/**
@compilation_should_fail
@stderr too many digits after a dot, nanograms are 10^9
 */
